--- a/src/app/settings/wallet-settings/wallet-settings.component.css
+++ b/src/app/settings/wallet-settings/wallet-settings.component.css
@@ -22,7 +22,7 @@
   }
 }
 
-::ng-deep .form-control form-control-no-border {
+::ng-deep .form-control {
   background: transparent!important;
   color: #fff!important;
 }
